--- a/android-client/app/build.gradle
+++ b/android-client/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.parrot:arsdk:3.13.1'
     compile 'com.google.android.gms:play-services:7.8+'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
 }
